# IZG-cvika

./: README.md
izg_lab_01/: CMakeLists.txt  README.md  at.h  base.cpp  base.h  main.cpp  student.cpp
izg_lab_02/: izg_lab_02.sln  izg_lab_02.vcxproj  izg_lab_02.vcxproj.filters  main.cpp  makefile  rasterizer.cpp  rasterizer.h  student.cpp
izg_lab_02/Debug/: izg_lab_02.exe.recipe  izg_lab_02.ilk  izg_lab_02.vcxproj.FileListAbsolute.txt  student.obj.enc  vc142.idb  vc143.idb
izg_lab_02/Debug/izg_lab_02.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  izg_lab_02.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
izg_lab_03/: izg.vcxproj
izg_lab_03/Debug/: izg.exe.recipe  izg.ilk  izg.vcxproj.FileListAbsolute.txt  vc142.idb
izg_lab_03/Debug/izg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  izg.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
izg_lab_03/src/: student.cpp
izg_lab_04/: CMakeLists.txt
izg_lab_04/include/: IZG_RotateCylinderDragger.h  IZG_TrackballDragger.h  Student.h
izg_lab_04/src/: IZG_RotateCylinderDragger.cpp  Student.cpp
izg_lab_05/: .gitignore  globals.h  izg_lab_04.sln  izg_lab_04.vcxproj  izg_lab_04.vcxproj.filters  student.cpp
izg_lab_06/: CMakeLists.txt
izg_lab_06/doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  index.html
izg_lab_06/doc/latex/: index.tex
izg_lab_06/shaders/: 00_empty.glsl  06_box.glsl  17_korea.glsl  student.glsl
izg_lab_06/src/: documentation.dox  main.cpp
